# financemodels

./: .gitignore  LICENSE  pyproject.toml
src/equitymodels/: __init__.py
src/equitymodels/models/: __init__.py  kalman_fama.py  macro_fama.py
src/equitymodels/pipelines/: __init__.py  equity_factor_pipeline.py
tests/: test_smoke.py
