[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equitymodels"                # project name
version = "0.1.0"
description = "Equity models and pipelines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="Your Name" }]
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "yfinance",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["equitymodels*"]          # <— IMPORTANT
