[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equitymodels"
version = "0.1.2"                # <-- bump this
description = "Equity models and pipelines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "pandas>=2.0,<2.3",
  "numpy>=1.26,<2.3",
  "scipy>=1.10,<1.14",
  "yfinance>=0.2,<0.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["equitymodels*"]
